--- a/roles/managed-clusters-role/vars/main/aws_secret.yml
+++ b/roles/managed-clusters-role/vars/main/aws_secret.yml
@@ -2,9 +2,8 @@ aws_hostedZone: ZASDFF23421
 aws_kmsKeyARN: arn:aws:kms:us-east-1:111122223333:key/1234abcd-12ab-34cd-56ef-1234567890ab
 aws_access_key_id: longstring
 aws_secret_access_key: evenlongerstring
-ssh_key: ssh-rsa AAAABBBBCCCCDDDDEEEFFF
-pull_secret: this-is-secret
-trustBundle: |-
+aws_ssh_key: ssh-rsa AAAABBBBCCCCDDDDEEEFFF
+aws_trustBundle: |-
   -----BEGIN CERTIFICATE-----
   MIIHIafasdf2MIIHIafasdf233MIIHIafasdf23
   asdfasdff329asdfasdff32977asdfasdff3297
