Moved some variables around and updated install-config templates

--- a/roles/managed-clusters-role/vars/main/secret.yml
+++ b/roles/managed-clusters-role/vars/main/secret.yml
@@ -1,3 +1,16 @@
 ---
 # secret vars file for managed-clusters-role
 pull_secret: "this-is-secret"
+trustBundle: |-
+  -----BEGIN CERTIFICATE-----
+  MIIHIafasdf2MIIHIafasdf233MIIHIafasdf23
+  asdfasdff329asdfasdff32977asdfasdff3297
+  jkwekj3aASDFjkwekj3aASDFkkjkwekj3aASDFk
+  -----END CERTIFICATE-----
+ssh_public_key: ssh-rsa AAAABBBBCCCCDDDDEEEFFF
+ssh_private_key: |-
+  -----BEGIN RSA PRIVATE KEY-----
+  asdfj23madsf7a8sefj33298asf
+  asdfj23madsf7a8sefj33298asf
+  -----END RSA PRIVATE KEY-----
+
