--- a/roles/managed-clusters-role/vars/main/vsphere.yml
+++ b/roles/managed-clusters-role/vars/main/vsphere.yml
@@ -10,7 +10,7 @@ vs_datacenter: datacenter
 vs_datastore: datastore
 vs_folder: folder
 vs_diskType: thin
-vs_network: "VM Networ"
+vs_network: "VM Network"
 vs_cluster: my_vsphere_cluster
 # The following VIPs should be defined per host in the inventory or host_vars
 vs_apiVIP: 10.10.10.10
@@ -25,10 +25,3 @@ vs_machinecidr:
   - 10.31.218.0/25
   - 10.31.218.128/25
   - 10.31.219.0/25
-trustBundle: |-
-  -----BEGIN CERTIFICATE-----
-  MIIHIafasdf2MIIHIafasdf233MIIHIafasdf23
-  asdfasdff329asdfasdff32977asdfasdff3297
-  jkwekj3aASDFjkwekj3aASDFkkjkwekj3aASDFk
-  -----END CERTIFICATE-----
-
