--- a/roles/managed-clusters-role/defaults/main/main.yml
+++ b/roles/managed-clusters-role/defaults/main/main.yml
@@ -7,6 +7,7 @@ servicecidr: 10.16.128.0/18
 ocp_networkType: OpenShiftSDN
 fips: false
 infra: true
+repo: repo.example.com
 additionalTags:
   env: lab
   priority: high
