Add and update a few AWS variables

--- a/roles/managed-clusters-role/defaults/main/aws.yml
+++ b/roles/managed-clusters-role/defaults/main/aws.yml
@@ -1,6 +1,8 @@
 ---
 # Publicly visible AWS Variables
 aws_worker_instance: m5.2xlarge
+aws_workers: 3
+aws_infra: 3
 aws_zone:
   - us-east-1a
   - us-east-1b
