--- a/roles/managed-clusters-role/defaults/main/aws_secret.yml
+++ b/roles/managed-clusters-role/defaults/main/aws_secret.yml
@@ -1,4 +1,6 @@
 aws_hostedZone: ZASDFF23421
-aws_kmsKeyARN: arn:aws:kms:us-east-1:111122223333:key/1234abcd-12ab-34cd-56ef-1234567890ab
+# format of kmsKeyARN is as below.  Set to None as a default
+#aws_kmsKeyARN: arn:aws:kms:us-east-1:111122223333:key/1234abcd-12ab-34cd-56ef-1234567890ab
+aws_kmsKeyARN: None
 aws_access_key_id: longstring
 aws_secret_access_key: evenlongerstring
