--- a/roles/managed-clusters-role/defaults/main/aws.yml
+++ b/roles/managed-clusters-role/defaults/main/aws.yml
@@ -2,6 +2,7 @@
 # Publicly visible AWS Variables
 aws_worker_instance: m5.2xlarge
 aws_workers: 3
+aws_infra_instance: m5.2xlarge
 aws_infra: 3
 aws_zone:
   - us-east-1a
